@@ -44,7 +44,7 @@
 				<data precision="32" endian="little" length="66">AABpRM0MaUSaGWlEZiZpRDMzaUQAQGlEzUxpRJpZaURmZmlEM3NpRACAaUTNjGlEmplpRGamaUQzs2lEAMBpRM3MaUSa2WlEZuZpRDPzaUQAAGpEzQxqRJoZakRmJmpEMzNqRABAakTNTGpEmllqRGZmakQzc2pEAIBqRM2MakSamWpEZqZqRDOzakQAwGpEzcxqRJrZakRm5mpEM/NqRAAAa0TNDGtEmhlrRGYma0QzM2tEAEBrRM1Ma0SaWWtEZmZrRDNza0QAgGtEzYxrRJqZa0RmpmtEM7NrRADAa0TNzGtEmtlrRGbma0Qz82tEAABsRM0MbESaGWxEZiZsRDMzbEQAQGxE</data>
 			</mzArrayBinary>
 			<intenArrayBinary>
-				<data precision="32" endian="little" length="66">eO63QtzzV0MIA55C1PmVQ+jzVEM89xtDcOvBQgAAAAD872dDAAAAAAAAAAAAAAAAwP6BQqALNEK4/RFDAAAAAGj9JUOeABhEDAEXRPj9gUMAAAAAeOXZQtDSN0IAAAAAAAAAAOYAakXqo4VGiSp9RiaaaUUAAAAAywHORCGU90V1iYRFkKBVRAAAAABCQcBEypzNRbAPjkU2SY9DAAAAAM8APESKXN1EKkCIRFCQHEIAAAAAoAuwQUT9LkNyfO1DUB+GQgAAAAB0ATxD8nzDQzH8R0SgzcBBAAAAAAAAgkPw/QND8AfYQy99WkR0/SJDAAAAABD8e0Ps/ZtDYCBUQgAAAAAAAAAA</data>
+				<data precision="32" endian="little" length="66">AAC4QgAAWEMAAJ5CAACWQwAAVUMAABxDAADCQgAAAAAAAGhDAAAAAAAAAAAAAAAAAACCQgAANEIAABJDAAAAAAAAJkMAABhEAAAXRAAAgkMAAAAAAADaQgAAOEIAAAAAAAAAAAAAakUApoVGACx9RgCAaUUAAAAAAADORACY90UAiIRFAIBVRAAAAAAAQMBEAKDNRQAQjkUAAI9DAAAAAAAAPEQAYN1EAECIRAAAHEIAAAAAAACwQQAAL0MAgO1DAACGQgAAAAAAADxDAIDDQwAASEQAAMBBAAAAAAAAgkMAAARDAADYQwCAWkQAACNDAAAAAAAAfEMAAJxDAABUQgAAAAAAAAAA</data>
 			</intenArrayBinary>
 		</spectrum>
 		<spectrum id="2">
@@ -59,7 +59,7 @@
 				<data precision="32" endian="little" length="66">AABpRM0MaUSaGWlEZiZpRDMzaUQAQGlEzUxpRJpZaURmZmlEM3NpRACAaUTNjGlEmplpRGamaUQzs2lEAMBpRM3MaUSa2WlEZuZpRDPzaUQAAGpEzQxqRJoZakRmJmpEMzNqRABAakTNTGpEmllqRGZmakQzc2pEAIBqRM2MakSamWpEZqZqRDOzakQAwGpEzcxqRJrZakRm5mpEM/NqRAAAa0TNDGtEmhlrRGYma0QzM2tEAEBrRM1Ma0SaWWtEZmZrRDNza0QAgGtEzYxrRJqZa0RmpmtEM7NrRADAa0TNzGtEmtlrRGbma0Qz82tEAABsRM0MbESaGWxEZiZsRDMzbEQAQGxE</data>
 			</mzArrayBinary>
 			<intenArrayBinary>
-				<data precision="32" endian="little" length="66">AAAAAAj9vUIi/KhDQDksQnT9okMAAD9DsPxTQsj7u0IAADw8AAAAAAAAAAC4/RFDAAASPAAAAAAAAAAAAAAAAAAAAADw/c9CEAKOQgAAAAAAAAAAAAAAAHDmO0IAAAAAAAAAAE8IiUV47GFGUQAIRp/eukQAAAAAOwHjRHKE40VAIk9FoG1CQwAAAAAfcWBEfgkaRboXzUQAAAAAQLwHQ+AjvkEUNO5ERHmFRLDGx0IAAAAAJ8AWROD8x0ToBsxDQNAwQQAAAADA+g9CKn0gRAT/60NgDgJD2PyfQ7D+Q0PA+qdCAAAAAAAAqDoY+tFCAAAAAAAAAAB4+l1DIBY0QgAAAAAAAAAA</data>
+				<data precision="32" endian="little" length="66">AAAAAAAAvkIAAKlDAAAsQgAAo0MAAD9DAABUQgAAvEIAAAAAAAAAAAAAAAAAABJDAAAAAAAAAAAAAAAAAAAAAAAAAAAAANBCAACOQgAAAAAAAAAAAAAAAAAAPEIAAAAAAAAAAAAIiUUA8GFGAAAIRgDAukQAAAAAAADjRACI40UAIE9FAABCQwAAAAAAgGBEABAaRQAgzUQAAAAAAAAIQwAAwEEAQO5EAICFRAAAyEIAAAAAAMAWRAAAyEQAAMxDAAAwQQAAAAAAABBCAIAgRAAA7EMAAAJDAACgQwAAREMAAKhCAAAAAAAAAAAAANJCAAAAAAAAAAAAAF5DAAA0QgAAAAAAAAAA</data>
 			</intenArrayBinary>
 		</spectrum>
 	</spectrumList>
